<resources>
    <string name="app_name">医帮宝配送</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!--  loading-->
    <string name="load_error">加载失败,点击重试</string>
    <string name="load_more">加载中...</string>

    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>

    <string name="crop__done">DONE</string>
    <string name="crop__cancel">CANCEL</string>

    <string name="search">搜索</string>

    <string name="s_zero_point_meal">零点餐</string>
    <string name="s_nutritious_food">营养餐</string>
    <string name="s_patients_meals">病患套餐</string>
    <string name="s_medical_meals">医护套餐</string>

    <string name="s_breakfast">早餐</string>
    <string name="s_lunch">中餐</string>
    <string name="s_dinner">晚餐</string>

    <!--我的订单-->
    <string name="str_mine_order_all">全部</string>
    <string name="str_mine_order_obligation">待付款</string>
    <string name="str_mine_order_receive">待收货</string>
    <string name="str_mine_order_to_evaluate">待评价</string>
    <string name="str_mine_order_back">已退餐</string>

    <string name="message_notice_sound">提示音效</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_msg">消息设定</string>
    <string name="setting_service_center">服务中心</string>
    <string name="setting_ebb_about">关于医帮宝</string>
    <string name="setting_logout">退出当前账号</string>
    <string name="setting_message">消息</string>
    <string name="setting_new_remind">新配送单提醒</string>
    <string name="setting_remind_type">提示音效</string>


    <!--P26-2消息设定-->
    <string name="message_notice_type">提醒类型</string>

    <!--p3 登录-->
    <string name="Login">登录</string>
    <string name="str_phone">请输入11位手机号</string>
    <string name="str_password_input">请输入密码6-16个字符</string>
    <string name="str_password_forget">忘记密码？</string>
    <string name="str_free_registration">免费注册</string>
    <string name="str_account_login">第三方账号登入</string>
    <string name="looking_forward_to">敬请期待</string>
    <string name="str_phone_number">请输入手机号码</string>
    <string name="str_verification_code">请输入验证码</string>
    <string name="str_verification">获取验证码</string>
    <string name="str_prompt">(请在60秒内完成验证，超时请点击重新发送)</string>
    <string name="str_next_step">下一步</string>

    <!-- P4 找回密码-->
    <string name="retrieve_password">找回密码</string>
    <string name="confirm_password">确认密码</string>


    <!--P23-->
    <string name="products">餐品</string>
    <string name="goods">商品</string>
    <string name="Order_meal">代点餐</string>
    <string name="distribution">配送单</string>
    <string name="refund_meal_reason">退餐原因</string>
    <string name="str_submit">提交</string>
    <string name="reason">原因详述</string>
    <string name="upload">凭证上传（可传5张，每张不超5M）</string>

    <string name="title_feedback">意见反馈</string>
    <string name="str_setting">设置</string>

    <string name="str_message">消息</string>
    <string name="order_remind">订单提醒</string>
    <string name="order_remind_detail">订单详情</string>

    <string name="my">我的</string>
    <string name="generation_of_order">代点餐订单</string>

    <string name="generation">代点餐</string>
    <string name="MealsDeliveryActivity">餐品配送</string>
    <string name="str_h_search">请输入关键字进行搜索</string>
    <string name="message_title">消息</string>
    <string name="Order_remind_details">订单详情</string>
    <string name="Order_number">订单号:</string>
    <string name="Order_tracking">订单跟踪</string>

    <!--关于-->
    <string name="set_up_about">关于医帮宝</string>

</resources>
