<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    >

    <RelativeLayout
        android:id="@+id/rl_feedback"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:background="@color/white"
        android:layout_marginTop="@dimen/common_distance"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mine_next"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/common_distance"
            />
        <TextView
            style="@style/text_13_sp"
            android:textColor="@color/common_black"
            android:text="@string/setting_feedback"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/common_distance"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"
        />
    <TextView
        style="@style/text_13_sp"
        android:textColor="@color/common_black"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:text="@string/setting_clear_cache"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/common_distance"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:id="@+id/setting_clear"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"
        />

    <RelativeLayout
        android:id="@+id/rl_msg_set"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:background="@color/white"
        android:layout_marginTop="@dimen/common_distance"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mine_next"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/common_distance"
            />
        <TextView
            style="@style/text_13_sp"
            android:textColor="@color/common_black"
            android:text="@string/setting_msg"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/common_distance"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_service"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mine_next"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/common_distance"
            />
        <TextView
            style="@style/text_13_sp"
            android:textColor="@color/common_black"
            android:text="@string/setting_service_center"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/common_distance"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mine_next"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/common_distance"
            />
        <TextView
            style="@style/text_13_sp"
            android:textColor="@color/common_black"
            android:text="@string/setting_ebb_about"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/common_distance"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"
        android:layout_marginTop="@dimen/common_distance"
        />
    <TextView
        style="@style/text_13_sp"
        android:textColor="@color/common_black"
        android:text="@string/setting_logout"
        android:paddingLeft="@dimen/common_distance"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:gravity="center_vertical"
        android:id="@+id/logout"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"
        />
</LinearLayout>